[gd_scene load_steps=19 format=3 uid="uid://cdk6hwb4hi2wc"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_gnitp"]
[ext_resource type="Script" path="res://Player/CameraFPC.gd" id="2_yglkb"]
[ext_resource type="Script" path="res://Player/CameraMap.gd" id="3_l84g8"]
[ext_resource type="Script" path="res://Player/PlayerFlashlight.gd" id="4_gk5ph"]
[ext_resource type="Texture2D" uid="uid://57f5ku7qlfsv" path="res://Assets/crosshair.png" id="5_sa2in"]
[ext_resource type="Texture2D" uid="uid://cjejtlsx67kht" path="res://Assets/reticle.png" id="6_xhpil"]
[ext_resource type="Script" path="res://Player/CollisionRayCrosshair.gd" id="7_mrgtt"]
[ext_resource type="Script" path="res://Player/VisibleBody.gd" id="8_qcm76"]
[ext_resource type="Script" path="res://Player/FPSCounter.gd" id="9_0ogcs"]
[ext_resource type="Script" path="res://Player/StateMachine.gd" id="10_l2arp"]
[ext_resource type="Script" path="res://Player/MovementLand.gd" id="11_r6671"]
[ext_resource type="Script" path="res://Player/MovementWater.gd" id="12_vhml2"]
[ext_resource type="Script" path="res://Player/MovementLadder.gd" id="13_mucyq"]
[ext_resource type="Script" path="res://Player/AimTarget.gd" id="14_de6hb"]
[ext_resource type="PackedScene" uid="uid://8pj82nx76wfx" path="res://mannequiny.tscn" id="15_jt0vm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3rsb5"]
radius = 0.357319
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_0jyoh"]
radius = 0.096856

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ru8h1"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_gnitp")

[node name="CShapeBody" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_3rsb5")

[node name="RayForwardStairsUpper" type="RayCast3D" parent="CShapeBody"]
transform = Transform3D(1, 0, 0, 0, -3.0598e-08, -1, 0, 0.7, -4.37114e-08, 0, -0.396206, 0)

[node name="RayForwardStairsLower" type="RayCast3D" parent="CShapeBody"]
transform = Transform3D(1, 0, 0, 0, -1.5299e-08, -1, 0, 0.35, -4.37114e-08, 0, -0.759152, 0)

[node name="CShapeHead" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49999, 0)
shape = SubResource("SphereShape3D_0jyoh")

[node name="CameraFPC" type="Camera3D" parent="CShapeHead"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00145996, 0)
current = true
fov = 80.0
script = ExtResource("2_yglkb")

[node name="CameraMap" type="Camera3D" parent="CShapeHead/CameraFPC"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00346839, 4.75281)
size = 20.0
script = ExtResource("3_l84g8")

[node name="PlayerFlashlight" type="SpotLight3D" parent="CShapeHead/CameraFPC"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000940442, -0.197474, 0)
light_energy = 100.0
light_size = 0.5
shadow_enabled = true
distance_fade_enabled = true
spot_range = 50.0
spot_angle = 25.0
spot_angle_attenuation = 4.0
script = ExtResource("4_gk5ph")

[node name="CenterContainer" type="CenterContainer" parent="CShapeHead/CameraFPC"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CrosshairGreen" type="TextureRect" parent="CShapeHead/CameraFPC/CenterContainer"]
layout_mode = 2
texture = ExtResource("5_sa2in")
stretch_mode = 5

[node name="CrosshairReticle" type="TextureRect" parent="CShapeHead/CameraFPC/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("6_xhpil")
stretch_mode = 3

[node name="CollisionRayCrosshair" type="RayCast3D" parent="CShapeHead/CameraFPC"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -100)
collide_with_areas = true
script = ExtResource("7_mrgtt")

[node name="RayTop" type="RayCast3D" parent="CShapeHead"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.605, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0.6, 0)
collide_with_areas = true

[node name="RayDownSwim" type="RayCast3D" parent="CShapeHead"]
unique_name_in_owner = true
target_position = Vector3(0, -0.5, 0)
collide_with_areas = true

[node name="VisibleBody" type="CSGSphere3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.827538, 0)
visible = false
radius = 0.300575
script = ExtResource("8_qcm76")

[node name="VisibleHead" type="CSGSphere3D" parent="VisibleBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.67727, 0)
radius = 0.0946376

[node name="VisibleNose" type="CSGCylinder3D" parent="VisibleBody/VisibleHead"]
transform = Transform3D(-0.999606, -0.0280613, 1.2266e-09, -5.64642e-23, -4.37114e-08, -1, 0.0280612, -0.999606, 4.36942e-08, 0, -0.0170112, -0.111069)
custom_aabb = AABB(0.14, 0, 0, 0, 0, 0)
radius = 0.0198027
height = 0.0622269
material = SubResource("ShaderMaterial_ru8h1")

[node name="VisibleTorso" type="CSGSphere3D" parent="VisibleBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.407523, 0)
radius = 0.207342

[node name="VisibleShoulders" type="CSGCylinder3D" parent="VisibleBody/VisibleTorso"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0.021659, -0.0348524)
radius = 0.0371688
height = 0.627514

[node name="FPSCounter" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("9_0ogcs")

[node name="StateMachine" type="Node3D" parent="."]
script = ExtResource("10_l2arp")
initial_state = NodePath("MovementLand")

[node name="MovementLand" type="Node3D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("11_r6671")

[node name="MovementWater" type="Node3D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("12_vhml2")

[node name="MovementLadder" type="Node3D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("13_mucyq")

[node name="AimTarget" type="Sprite3D" parent="."]
unique_name_in_owner = true
pixel_size = 0.005
texture = ExtResource("6_xhpil")
script = ExtResource("14_de6hb")

[node name="mannequiny" parent="." instance=ExtResource("15_jt0vm")]
unique_name_in_owner = true
